fix too long title in aside menu

--- a/static/css/hugo-theme-toc.css
+++ b/static/css/hugo-theme-toc.css
@@ -98,6 +98,13 @@
     padding-left: 0;
 }
 
+.toc.toc-aside #TableOfContents a {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: block;
+}
+
 .toc.toc-aside #TableOfContents li > a {
     padding-left: 4px;
 }
